--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lab 17 - The Jukebox Application</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 17: The Event Countdown Application</title>
+    <link href="css/styles.css" rel="stylesheet">
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <main>
+        <h1>Countdown To...</h1>
+        <label for="event">Event Name:</label>
+        <input type="text" id="event"><br>
+        <label for="date">Event Date:</label>
+        <input type="text" id="date"><br>
+        <input type="button" id="countdown" value="Countdown!">
+        <p id="message">&nbsp;</p>
+    </main>
 </body>
 </html>
